Mon premier commit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,46 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-split-pane>
+    <ion-router-outlet main></ion-router-outlet>
+    <ion-menu>
+      <ion-header>
+        <ion-toolbar  color="primary">
+          <ion-title>Menu</ion-title>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content>
+     <ion-list>
+       <ion-item>
+         <ion-icon name="flag" slot="start"> </ion-icon>
+         <div class="my-container-label">
+          <ion-label>Dictionaire</ion-label> 
+         </div>
+       </ion-item>
+       <ion-item>
+        <ion-icon name="flag" slot="start"> </ion-icon>
+        <div class="my-container-label">
+         <ion-label class="my-label-title">Phrases</ion-label>
+        </div>
+      </ion-item>
+      <ion-item>
+        <ion-icon name="flag" slot="start"> </ion-icon>
+        <div class="my-container-label">
+         <ion-label class="my-label-title">Verbes</ion-label>
+        </div>
+      </ion-item>
+      <ion-item>
+        <ion-icon name="flag" slot="start"> </ion-icon>
+        <div class="my-container-label">
+         <ion-label class="my-label-title">Quiz</ion-label>
+        </div>
+      </ion-item>
+      <ion-item>
+        <ion-icon name="flag" slot="start"> </ion-icon>
+        <div class="my-container-label">
+         <ion-label class="my-label-title">traduire</ion-label>
+        </div>
+      </ion-item>
+     </ion-list>
+      </ion-content>
+    </ion-menu>
+  </ion-split-pane> 
 </ion-app>
