--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,12 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+.my-container-label{
+    padding-top: 10px !important;
+    padding-bottom:10px !important;
+    .my-label-title{
+        font-weight: 500;
+        font-size: 18px !important;
+    }
+}
