--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,20 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
+    <ion-menu-button slot="start">
+    </ion-menu-button>
     <ion-title>
-      Ionic Blank
+      Francais-Lingala
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
-  </div>
+<ion-content >
+  <ion-list>
+    <ion-item *ngFor="let word of Words">
+      <div class="my-container-label">
+       <ion-label>{{word.francais}}</ion-label> 
+       <ion-label color="medium">{{word.lingala}}</ion-label>
+      </div>
+    </ion-item>
+  </ion-list>
 </ion-content>
