--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,6 +39,12 @@
          <ion-label class="my-label-title">traduire</ion-label>
         </div>
       </ion-item>
+      <ion-item>
+        <ion-icon name="flag" slot="start"> </ion-icon>
+        <div class="my-container-label">
+         <ion-label class="my-label-title">Noms de nombres</ion-label>
+        </div>
+      </ion-item>
      </ion-list>
       </ion-content>
     </ion-menu>
